# hslock

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  ci  core1.c  core1.h  lwipopts.h  main.c  mbedtls_config.h  version.h.in
.github/workflows/: ci.yml  format.yml  pages.yml  test.yml
docs/: BUILD.md  COMMANDS.md  KEYPAD.md
hardware/: buzzer.c  buzzer.h  clock.c  clock.h  keypad.c  keypad.h  latch.c  latch.h  led.c  led.h  light.c  light.h
libs/base32/: base32.c  base32.h
libs/base64/: base64.c  base64.h
network/: ntp.c  ntp.h  wifi.c  wifi.h
serial/: commands.c  commands.h  commands_backup.c  commands_handlers.h  commands_keys.c  commands_network.c  commands_system.c  console.c  console.h
shared/: random.c  random.h  totp.c  totp.h
storage/: backup.c  backup.h  storage.c  storage.h
test/: FUZZING.md  Makefile  coverage-summary.sh  fuzz_backup.c  fuzz_console.c  fuzz_console.dict  fuzz_ntp.c  fuzz_replay.c  fuzz_storage.c  fuzz_totp.c  gen_backup_seeds.c  harness_base64.c  harness_commands.c  harness_secret_qr.c  harness_storage.c  harness_totp.c
test/fuzz_backup_corpus/: bad_magic  bad_version  body_truncated  count_over_max  crc_mismatch  magic_truncated  nonbool_flags  short_header  valid_0keys  valid_1key  valid_2keys  valid_countmax  valid_flags
test/fuzz_corpus/: addkey  argerr_status  argerr_toomany  edge_bs_empty  edge_bs_mid  edge_ctrl  edge_ws_around  export  gettime  help_admin  import_fail  import_valid  keys_display  keys_idempotent  keys_idrange  keys_nametoolong  keys_notfound  keys_zerodate  listkeys  login  login_badkey  login_clockgate  mutators  ntpsync  reboot  roundtrip  secret  setwifi  status_disabled  totp_login  totp_reject  wifi_argerr
test/fuzz_ntp_corpus/: mode_client  oversized_64  ts_2010  ts_max  ts_unix_epoch  ts_zero  valid_2023
test/fuzz_storage_corpus/: seed_basic  seed_mixed
test/fuzz_totp_corpus/: rfc_seed  short_secret
test/stub/: version.h
test/stub/hardware/: flash.h  rtc.h  sync.h  watchdog.h
test/stub/lwip/: arch.h  dns.h  err.h  ip_addr.h  pbuf.h  udp.h
test/stub/mbedtls/: md.h
test/stub/pico/: cyw43_arch.h  flash.h  multicore.h  rand.h  stdio_usb.h  stdlib.h  time.h  unique_id.h
